--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React version of pull to refresh",
   "author": "man27382210",
   "scripts": {
-    "playground": "webpack-dev-server --content-base playground src/playground/index.tsx  ",
+    "playground": "webpack-dev-server --config ./webpack.dev.config.js --content-base playground",
     "predist": "rimraf dist",
     "dist-build": "NODE_ENV=prod webpack",
     "dist": "npm run lint && npm run dist-build",
@@ -43,6 +43,8 @@
     "css-loader": "^1.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^5.9.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "glob": "^7.1.3",
     "jest": "^23.6.0",
@@ -71,6 +73,7 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.4",
+    "webpack-fix-style-only-entries": "^0.0.5",
     "webpack-shell-plugin": "^0.5.0"
   },
   "peerDependencies": {
